<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AD230</string>
    <string name="title_section1">Tip Calculator</string>
    <string name="title_section2">Twitter Search</string>
    <string name="title_section3">Flag Quiz</string>
    <string name="title_section4">Cannon Game</string>
    <string name="title_section5">Spot On</string>
    <string name="title_section6">Doodlz</string>
    <string name="title_section7">Address Book</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="billTotal">Bill Total</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="custom">Custom</string>
    <string name="zero">0.00</string>

    <string name="twit_search_button_label">Search</string>
    <string name="twit_save_button_label">Save</string>
    <string name="twit_search_hint">Enter Twitter Query Here</string>
    <string name="twit_search_title_label">Twitter Search</string>
    <string name="twit_saved_search_title">Tagged Searches</string>
    <string name="twit_clear_button_label">Clear</string>
    <string name="twit_delete_button_label">Delete</string>
    <string name="twit_search_saved_button_label">Search</string>
    <string name="twit_cancel">Cancel</string>
    <string name="twit_OK">OK</string>
    <string name="twit_missingTitle">Missing Text</string>
    <string name="twit_missingMessage">Please enter a search query and tag it.</string>
    <string name="twit_confirmTitle">Are You Sure?</string>
    <string name="twit_confirmMessage">This will delete all saved searches</string>
    <string name="twit_erase">Erase</string>
    <string name="twit_searchURL">http://mobile.twitter.com/search?q=</string>

    <dimen name="twit_button_width">100dp</dimen>

    <string name="flag_choices">Select Number of Choices</string>
    <string name="flag_correct">correct</string>
    <string name="flag_guess_country">Guess the Country</string>
    <string name="flag_guesses">guesses</string>
    <string name="flag_incorrect_answer">Incorrect!</string>
    <string name="flag_more_regions_title">More Regions Required</string>
    <string name="flag_more_regions_message">There are not enough countries in the selected regions. Please select more regions.</string>
    <string name="flag_of">of</string>
    <string name="flag_ok">OK</string>
    <string name="flag_question">Flag</string>
    <string name="flag_quiz_title">Ten Question Flag Quiz</string>
    <string name="flag_regions">Select Regions</string>
    <string name="flag_reset_quiz">Reset Quiz</string>
    <string-array name="flag_regionsList">
        <item>Africa</item>
        <item>Asia</item>
        <item>Europe</item>
        <item>North_America</item>
        <item>Oceania</item>
        <item>South_America</item>
    </string-array>
    <string-array name="flag_guessesList">
        <item>3</item>
        <item>6</item>
        <item>9</item>
    </string-array>

    <string name="cannon_results_format">Shots fired: %1$d\nTotal time: %2$.1f</string>
    <string name="cannon_reset_game">Reset Game</string>
    <string name="cannon_win">You win!</string>
    <string name="cannon_lose">You lose!</string>
    <string name="cannon_time_remaining_format"> Time remaining: %.1f seconds</string>

    <string name="spot_on_high_score">High Score: </string>
    <string name="spot_on_score">Score: </string>
    <string name="spot_on_level">Level: </string>
    <string name="spot_on_reset_game">Reset Game</string>
    <string name="spot_on_game_over">Game Over</string>

    <string name="doodlz_button_erase">Erase</string>
    <string name="doodlz_button_cancel">Cancel</string>
    <string name="doodlz_button_set_color">Set Color</string>
    <string name="doodlz_button_set_line_width">Set Line Width</string>
    <string name="doodlz_label_alpha">Alpha</string>
    <string name="doodlz_label_red">Red</string>
    <string name="doodlz_label_green">Green</string>
    <string name="doodlz_label_blue">Blue</string>
    <string name="doodlz_menuitem_clear">Clear</string>
    <string name="doodlz_menuitem_color">Color</string>
    <string name="doodlz_menuitem_erase">Erase</string>
    <string name="doodlz_menuitem_line_width">Line Width</string>
    <string name="doodlz_menuitem_save_image">Save Image</string>
    <string name="doodlz_message_erase">Erase the drawing?</string>
    <string name="doodlz_message_error_saving">
       There was an error saving the image</string>
    <string name="doodlz_message_saved">
       Your painting has been saved to the Gallery</string>
    <string name="doodlz_title_color_dialog">Choose Color</string>
    <string name="doodlz_title_line_width_dialog">Choose Line Width</string>

    <string name="addy_book_button_add_contact">Add Contact</string>
    <string name="addy_book_button_save_contact">Save Contact</string>
    <string name="addy_book_menuitem_add_contact">Add Contact</string>
    <string name="addy_book_menuitem_edit_contact">Edit Contact</string>
    <string name="addy_book_menuitem_delete_contact">Delete Contact</string>
    <string name="addy_book_address">Address</string>
    <string name="addy_book_hint_name">Name</string>
    <string name="addy_book_hint_email">E-Mail</string>
    <string name="addy_book_hint_phone">Phone</string>
    <string name="addy_book_hint_street">Street</string>
    <string name="addy_book_hint_city">City/State/Zip</string>
    <string name="addy_book_label_name">Name:</string>
    <string name="addy_book_label_email">E-Mail:</string>
    <string name="addy_book_label_phone">Phone:</string>
    <string name="addy_book_label_street">Street:</string>
    <string name="addy_book_label_city">City/State/Zip:</string>
    <string name="addy_book_confirmTitle">Are You Sure?</string>
   <string name="addy_book_confirmMessage">
      This will permanently delete the contact</string>
    <string name="addy_book_errorButton">OK</string>
    <string name="addy_book_errorTitle">Contact Name is Required</string>
    <string name="addy_book_errorMessage">You must enter a contact name</string>
    <string name="addy_book_button_cancel">Cancel</string>
    <string name="addy_book_button_delete">Delete</string>
    <string name="addy_book_delete_button">Delete</string>
    <string name="addy_book_edit_button">Edit</string>

</resources>
